# plg-direct-demo

./: .dockerignore  .gitignore  Dockerfile  FAQ.md  LICENSE  README.md  dashboard.json  dashboard.yaml  docker-compose.yaml  main.py  mock_async.py  promtail-config.yaml  pyproject.toml  requirements.txt
.assets/: 测试环境网络拓扑.vsd
.github/workflows/: pylint.yml
config/: alloy-config.local.alloy  loki-config.local.yaml  promtail-forwarder.example.yaml  promtail-forwarder.local.yaml  promtail-forwarder.yaml  promtail-processor.example.yaml  promtail-processor.local.yaml  promtail-processor.yaml
dashboards/: dashboard.json  dashboard.yaml
docker/: docker-compose.forwarder.yaml  docker-compose.local.yaml  docker-compose.monitor.yaml  docker-compose.processor.yaml
prometheus/: prometheus.yml
provisioning/: README
provisioning/datasources/: datasource.yaml
src/: requirements.txt
src/docker/: Dockerfile.watcher  Dockerfile_forwarder  Dockerfile_processor
src/services/: base_service.py  config.py  log.py  main.py  main_forwarder.py  main_processor.py  models.py  services.py  utils.py
src/services/forwarder/: log.py  utils.py
src/services/processor/: log.py
src/services/public/: models.py
src/tools/: db_connection_test.py
src/watcher/: dao.py  main.py
