[project]
name = "plg-direct-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mysql-connector-python>=9.5.0",
    "prometheus-client>=0.24.1",
    "pylint>=4.0.4",
    "pymysql>=1.1.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
